// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generates token 1`] = `
<TokenStep
  currentUser={
    Object {
      "login": "user",
    }
  }
  finished={false}
  onContinue={[MockFunction]}
  onOpen={[MockFunction]}
  open={true}
  stepNumber={1}
>
  <Step
    finished={false}
    onOpen={[MockFunction]}
    open={true}
    renderForm={[Function]}
    renderResult={[Function]}
    stepNumber={1}
    stepTitle="onboarding.token.header"
  >
    <div
      className="boxed-group onboarding-step is-open"
    >
      <div
        className="onboarding-step-number"
      >
        1
      </div>
      <div
        className="boxed-group-header"
      >
        <h2>
          onboarding.token.header
        </h2>
      </div>
      <div
        className="boxed-group-inner"
      >
        <div>
          <div>
            <a
              className="js-new link-base-color link-no-underline"
              href="#"
              onClick={[Function]}
            >
              <i
                className="icon-radio spacer-right is-checked"
              />
              onboading.token.generate_token
            </a>
            <div
              className="big-spacer-top"
            >
              <form
                onSubmit={[Function]}
              >
                <input
                  autoFocus={true}
                  className="input-large spacer-right text-middle"
                  onChange={[Function]}
                  placeholder="onboading.token.generate_token.placeholder"
                  required={true}
                  type="text"
                  value=""
                />
                <SubmitButton
                  className="text-middle"
                  disabled={true}
                >
                  <Button
                    className="text-middle"
                    disabled={true}
                    preventDefault={false}
                    type="submit"
                  >
                    <button
                      className="button text-middle"
                      disabled={true}
                      onClick={[Function]}
                      type="submit"
                    >
                      onboarding.token.generate
                    </button>
                  </Button>
                </SubmitButton>
              </form>
            </div>
          </div>
          <div
            className="big-spacer-top"
          >
            <a
              className="js-new link-base-color link-no-underline"
              href="#"
              onClick={[Function]}
            >
              <i
                className="icon-radio spacer-right"
              />
              onboarding.token.use_existing_token
            </a>
          </div>
        </div>
        <div
          className="note big-spacer-top width-50"
        >
          onboarding.token.text
        </div>
      </div>
    </div>
  </Step>
</TokenStep>
`;

exports[`generates token 2`] = `
<TokenStep
  currentUser={
    Object {
      "login": "user",
    }
  }
  finished={false}
  onContinue={[MockFunction]}
  onOpen={[MockFunction]}
  open={true}
  stepNumber={1}
>
  <Step
    finished={false}
    onOpen={[MockFunction]}
    open={true}
    renderForm={[Function]}
    renderResult={[Function]}
    stepNumber={1}
    stepTitle="onboarding.token.header"
  >
    <div
      className="boxed-group onboarding-step is-open"
    >
      <div
        className="onboarding-step-number"
      >
        1
      </div>
      <div
        className="boxed-group-header"
      >
        <h2>
          onboarding.token.header
        </h2>
      </div>
      <div
        className="boxed-group-inner"
      >
        <div>
          <div>
            <a
              className="js-new link-base-color link-no-underline"
              href="#"
              onClick={[Function]}
            >
              <i
                className="icon-radio spacer-right is-checked"
              />
              onboading.token.generate_token
            </a>
            <div
              className="big-spacer-top"
            >
              <form
                onSubmit={[Function]}
              >
                <input
                  autoFocus={true}
                  className="input-large spacer-right text-middle"
                  onChange={[Function]}
                  placeholder="onboading.token.generate_token.placeholder"
                  required={true}
                  type="text"
                  value="my token"
                />
                <i
                  className="spinner text-middle"
                />
              </form>
            </div>
          </div>
          <div
            className="big-spacer-top"
          >
            <a
              className="js-new link-base-color link-no-underline"
              href="#"
              onClick={[Function]}
            >
              <i
                className="icon-radio spacer-right"
              />
              onboarding.token.use_existing_token
            </a>
          </div>
        </div>
        <div
          className="note big-spacer-top width-50"
        >
          onboarding.token.text
        </div>
      </div>
    </div>
  </Step>
</TokenStep>
`;

exports[`generates token 3`] = `
<TokenStep
  currentUser={
    Object {
      "login": "user",
    }
  }
  finished={false}
  onContinue={[MockFunction]}
  onOpen={[MockFunction]}
  open={true}
  stepNumber={1}
>
  <Step
    finished={false}
    onOpen={[MockFunction]}
    open={true}
    renderForm={[Function]}
    renderResult={[Function]}
    stepNumber={1}
    stepTitle="onboarding.token.header"
  >
    <div
      className="boxed-group onboarding-step is-open"
    >
      <div
        className="onboarding-step-number"
      >
        1
      </div>
      <div
        className="boxed-group-header"
      >
        <h2>
          onboarding.token.header
        </h2>
      </div>
      <div
        className="boxed-group-inner"
      >
        <form
          onSubmit={[Function]}
        >
          <span
            className="text-middle"
          >
            my token
            : 
          </span>
          <strong
            className="spacer-right text-middle"
          >
            abcd1234
          </strong>
          <DeleteButton
            className="button-small text-middle"
            onClick={[Function]}
          >
            <ButtonIcon
              className="button-small text-middle"
              color="#d4333f"
              onClick={[Function]}
            >
              <Button
                className="button-small text-middle button-icon"
                onClick={[Function]}
                stopPropagation={true}
                style={
                  Object {
                    "color": "#d4333f",
                  }
                }
              >
                <button
                  className="button button-small text-middle button-icon"
                  onClick={[Function]}
                  style={
                    Object {
                      "color": "#d4333f",
                    }
                  }
                  type="button"
                >
                  <ClearIcon />
                </button>
              </Button>
            </ButtonIcon>
          </DeleteButton>
        </form>
        <div
          className="note big-spacer-top width-50"
        >
          onboarding.token.text
        </div>
        <div
          className="big-spacer-top"
        >
          <Button
            className="js-continue"
            onClick={[Function]}
          >
            <button
              className="button js-continue"
              onClick={[Function]}
              type="button"
            >
              continue
            </button>
          </Button>
        </div>
      </div>
    </div>
  </Step>
</TokenStep>
`;

exports[`revokes token 1`] = `
<TokenStep
  currentUser={
    Object {
      "login": "user",
    }
  }
  finished={false}
  onContinue={[MockFunction]}
  onOpen={[MockFunction]}
  open={true}
  stepNumber={1}
>
  <Step
    finished={false}
    onOpen={[MockFunction]}
    open={true}
    renderForm={[Function]}
    renderResult={[Function]}
    stepNumber={1}
    stepTitle="onboarding.token.header"
  >
    <div
      className="boxed-group onboarding-step is-open"
    >
      <div
        className="onboarding-step-number"
      >
        1
      </div>
      <div
        className="boxed-group-header"
      >
        <h2>
          onboarding.token.header
        </h2>
      </div>
      <div
        className="boxed-group-inner"
      >
        <form
          onSubmit={[Function]}
        >
          <span
            className="text-middle"
          >
            my token
            : 
          </span>
          <strong
            className="spacer-right text-middle"
          >
            abcd1234
          </strong>
          <DeleteButton
            className="button-small text-middle"
            onClick={[Function]}
          >
            <ButtonIcon
              className="button-small text-middle"
              color="#d4333f"
              onClick={[Function]}
            >
              <Button
                className="button-small text-middle button-icon"
                onClick={[Function]}
                stopPropagation={true}
                style={
                  Object {
                    "color": "#d4333f",
                  }
                }
              >
                <button
                  className="button button-small text-middle button-icon"
                  onClick={[Function]}
                  style={
                    Object {
                      "color": "#d4333f",
                    }
                  }
                  type="button"
                >
                  <ClearIcon />
                </button>
              </Button>
            </ButtonIcon>
          </DeleteButton>
        </form>
        <div
          className="note big-spacer-top width-50"
        >
          onboarding.token.text
        </div>
        <div
          className="big-spacer-top"
        >
          <Button
            className="js-continue"
            onClick={[Function]}
          >
            <button
              className="button js-continue"
              onClick={[Function]}
              type="button"
            >
              continue
            </button>
          </Button>
        </div>
      </div>
    </div>
  </Step>
</TokenStep>
`;

exports[`revokes token 2`] = `
<TokenStep
  currentUser={
    Object {
      "login": "user",
    }
  }
  finished={false}
  onContinue={[MockFunction]}
  onOpen={[MockFunction]}
  open={true}
  stepNumber={1}
>
  <Step
    finished={false}
    onOpen={[MockFunction]}
    open={true}
    renderForm={[Function]}
    renderResult={[Function]}
    stepNumber={1}
    stepTitle="onboarding.token.header"
  >
    <div
      className="boxed-group onboarding-step is-open"
    >
      <div
        className="onboarding-step-number"
      >
        1
      </div>
      <div
        className="boxed-group-header"
      >
        <h2>
          onboarding.token.header
        </h2>
      </div>
      <div
        className="boxed-group-inner"
      >
        <form
          onSubmit={[Function]}
        >
          <span
            className="text-middle"
          >
            my token
            : 
          </span>
          <strong
            className="spacer-right text-middle"
          >
            abcd1234
          </strong>
          <i
            className="spinner text-middle"
          />
        </form>
        <div
          className="note big-spacer-top width-50"
        >
          onboarding.token.text
        </div>
        <div
          className="big-spacer-top"
        >
          <Button
            className="js-continue"
            onClick={[Function]}
          >
            <button
              className="button js-continue"
              onClick={[Function]}
              type="button"
            >
              continue
            </button>
          </Button>
        </div>
      </div>
    </div>
  </Step>
</TokenStep>
`;

exports[`revokes token 3`] = `
<TokenStep
  currentUser={
    Object {
      "login": "user",
    }
  }
  finished={false}
  onContinue={[MockFunction]}
  onOpen={[MockFunction]}
  open={true}
  stepNumber={1}
>
  <Step
    finished={false}
    onOpen={[MockFunction]}
    open={true}
    renderForm={[Function]}
    renderResult={[Function]}
    stepNumber={1}
    stepTitle="onboarding.token.header"
  >
    <div
      className="boxed-group onboarding-step is-open"
    >
      <div
        className="onboarding-step-number"
      >
        1
      </div>
      <div
        className="boxed-group-header"
      >
        <h2>
          onboarding.token.header
        </h2>
      </div>
      <div
        className="boxed-group-inner"
      >
        <div>
          <div>
            <a
              className="js-new link-base-color link-no-underline"
              href="#"
              onClick={[Function]}
            >
              <i
                className="icon-radio spacer-right is-checked"
              />
              onboading.token.generate_token
            </a>
            <div
              className="big-spacer-top"
            >
              <form
                onSubmit={[Function]}
              >
                <input
                  autoFocus={true}
                  className="input-large spacer-right text-middle"
                  onChange={[Function]}
                  placeholder="onboading.token.generate_token.placeholder"
                  required={true}
                  type="text"
                  value=""
                />
                <SubmitButton
                  className="text-middle"
                  disabled={true}
                >
                  <Button
                    className="text-middle"
                    disabled={true}
                    preventDefault={false}
                    type="submit"
                  >
                    <button
                      className="button text-middle"
                      disabled={true}
                      onClick={[Function]}
                      type="submit"
                    >
                      onboarding.token.generate
                    </button>
                  </Button>
                </SubmitButton>
              </form>
            </div>
          </div>
          <div
            className="big-spacer-top"
          >
            <a
              className="js-new link-base-color link-no-underline"
              href="#"
              onClick={[Function]}
            >
              <i
                className="icon-radio spacer-right"
              />
              onboarding.token.use_existing_token
            </a>
          </div>
        </div>
        <div
          className="note big-spacer-top width-50"
        >
          onboarding.token.text
        </div>
      </div>
    </div>
  </Step>
</TokenStep>
`;
